--- a/Week1/Day1/HomeWork/styles/style.css
+++ b/Week1/Day1/HomeWork/styles/style.css
@@ -7,3 +7,35 @@ html {
   font-family: 'Open Sans', sans-serif;
   font-size: 18px
 }
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+  height:400px ;
+  
+}
+
+h2{
+  color: white;
+  font-size: 50px;
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+div{
+  margin-top:5%;
+  margin-left: 20%;
+  margin-right: 20%;
+  
+
+}
+ul {
+  list-style-type: '- ';
+}
+li{
+  content: ")"; /* Insert content that looks like bullets */
+}
+
